OldschoolTheme/assets/css/main.css
/* 90's Simplified Theme for Publii */

/* Reset & Body Styles */
body {
    margin: 4px auto;
    padding: 0;
    font-family: sans-serif;
    font-size: 14px;
    line-height: 1.3;
    color: #000000;
    background-color: #FFFFFF;
    text-align: center;
}

.sitecontent {
    display: block;
    max-width: 1280px;
    border: solid 3px;
    border-color: #003366;
    margin: 0 auto;
    font-size: 0px; /* Fixes IE5 margin bug */
}

/* Main container for centering content */
.container {
    margin: 20px auto;
    background-color: #fff;
    border: 2px solid #000;
    padding: 10px;
}

/*** Layout ***/
/* Header */
.header {
    background-color: #3c78b5;
    color: #FFFFFF;
    text-align: center;
    padding: 5px;
    font-size: 14px;
}

.subtitle {
    font-size: 1em;
    font-style: italic;
}

/* Navbar layout */
.navbar {
    background-color: #003366;
    padding: 10px;
    text-align: center;
    margin-bottom: 0px;
}

.navbar-title {
    color: #FFFFFF;
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
    display: block;
    margin-bottom: 5px;
}

.navbar-title:visited {
    color: #FFFFFF;
}

.navbar__logo a:visited {
    color: #FFFFFF;
}

/* Main content area */
.main {
    width: 90%;
    max-width: 1024px;
    padding: 10px;
    margin: 0 auto;
    padding-bottom: 30px;
    text-align: left;
    font-size: 14px;
}

/* Footer */
.footer {
    clear: both;
    background-color: #003366;
    color: #FFFFFF;
    text-align: center;
    padding: 8px;
    font-size: 14px;
}

.footer a:link {
    text-decoration: none;
    color: #FFFFFF;
}

.footer a:visited {
    text-decoration: none;
    color: #A87CA8;
}

.footer a:hover {
    text-decoration: none;
    color: #B3B28C;
}

.footer a img {
    padding-left: 3px;
    padding-right: 3px;
    border: 0;
}


/* Clearfix utility */
.clearfix:before, .clearfix:after {
    content: "";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/*** Publii Generated Classes ***/

/* Text alignment */
.align-left {
    text-align: left;
}

.align-right {
    text-align: right;
}

.align-center {
    text-align: center;
}

.align-justify {
    text-align: justify;
}

/* Post images */
.post__image--left {
    float: left;
    margin-right: 10px;
}

.post__image--right {
    float: right;
    margin-left: 10px;
}

.post__image--center {
    display: block;
    margin: 0 auto;
}

.post__image--wide,
.post__image--full {
    width: 100%;
}

/* Post video */
.post__video {
    text-align: center;
}

.post__iframe {
    border: none;
    text-align: center;
}

/* Table of content */
.post__toc {
    background-color: #e0e0e0;
    padding: 10px;
    border: 1px solid #000;
}

.separator--dot {
    border-top: 1px dotted #000;
}

.separator--dots {
    border-top: 1px dashed #000;
}

.separator--long-line {
    border-top: 1px solid #000;
    width: 100%;
    margin: 20px 0;
}

/* Gallery */
.gallery-wrapper {
    margin: 20px 0;
    padding: 10px;
    border: 2px solid #000;
    background-color: #fff;
}

.gallery-wrapper--wide,
.gallery-wrapper--full {
    width: 100%;
}

.gallery {
    list-style: none;
    padding: 0;
    margin: 0;
}

.gallery__item {
    margin: 5px;
    border: 1px solid #000;
}

.active {
    font-weight: bold;
}

.has-submenu {
    position: relative;
}

.active-parent {
    font-style: italic;
}

/* Main menu styles */
.menu-bar {
    background-color: #2F685E;
}

.menu {
     background-color: #2F685E;
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

.menu li {
    margin: 0 10px;
}

.menu a {
    color: #FFFFFF;
    text-decoration: underline;
    font-weight: bold;
}

.menu a:hover {
    text-decoration: none;
}

/* Submenu styles (not really used in 90s themes but kept for completeness) */
.submenu {
    display: none;
    position: absolute;
    background-color: #2F685E;
    border: 1px solid #000;
    padding: 5px;
    list-style: none;
}

.has-submenu:hover > .submenu {
    display: block;
}

/* Images */
img {
    border: 1px solid #000;
    max-width: 100%;
    height: auto;
    vertical-align: top;
}

/* Related posts (stacked for 90's style) */
#related-posts > div {
    margin-bottom: 10px;
}

/* Separator styles */
hr {
    /*border: 0;
    height: 2px;
    background-color: #000;
    margin: 20px 0;*/
}

/* Link styling reminiscent of old browsers */
a:link {
    color: #0000EE;
}

a:visited {
    color: #551A8B;
}

a:hover {
    color: #000000;
    text-decoration: underline;
}

